# chak-ai

./: .gitignore  README.md  chak-config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
chak/: __init__.py  conversation.py  exceptions.py  message.py
chak/context/: __init__.py
chak/context/strategies/: __init__.py  base.py  fifo.py  lru.py  noop.py  summarize.py
chak/mcp/: __init__.py  client.py  manager.py  server.py  tool.py
chak/providers/: __init__.py  types.py
chak/providers/llm/: __init__.py  anthropic.py  azure.py  baidu.py  bailian.py  base.py  deepseek.py  google.py  iflytek.py  minimax.py  mistral.py  moonshot.py  ollama.py  openai.py  siliconflow.py  tencent.py  vllm.py  volcengine.py  xai.py  zhipu.py
chak/server/: __init__.py  app.py  config.py  playground.html  schemas.py  websocket.py
chak/utils/: __init__.py  logger.py  model_info.py  models.py  uri.py
docs/: README_CN.md
examples/: example_bailian.py  example_server.py  mcp_chat_http.py  mcp_chat_sse.py  mcp_chat_stdio.py  my_calculator_mcp_server.py  server-config.yaml  simple_chat_bailian_qwen.py  simple_chat_ollama_qwen.py  simple_chat_openai_gpt4.py  strategy_chat_fifo.py  strategy_chat_lru.py  strategy_chat_summarization.py
